finished UserController implementation with swagger, UserService and tests for UserService, i guess)
